# StressCam

./: .gitignore  README.md  pyproject.toml
experiments/: exp001_dataset.md
notebooks/: 01_dataset_exploration.ipynb  03_skin_segmentation.ipynb  04_rgb_time_signals.ipynb  05_pos_algorithm.ipynb  06_physiological_features.ipynb  07_stress_analysis.ipynb  README.md
stresscam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stresscam/features/: physiological_features.py  prv.py
stresscam/preprocessing/: face_detection.py  rgb_extraction.py  skin_segmentation.py
stresscam/rppg/: pos.py
